sidenav alignment correction

--- a/src/app/sidenavigationbar/sidenavigationbar.component.css
+++ b/src/app/sidenavigationbar/sidenavigationbar.component.css
@@ -29,3 +29,11 @@ h1.example-app-name {
      `<body>` to be our scrolling element for mobile layouts. */
   flex: 1 0 auto;
 }
+
+.sidenav-content {
+  align-content: center;
+}
+
+.app-sidenav-content {
+  background-color: lightsteelblue;
+}
